--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <footer class="bg-dark text-white text-center p-3 mt-4">
-        <p>&copy; 2024 Meu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Danilo de Araújo Pereira. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
